[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "microvenv"
version = "2023.5.post1"
description = "A minimal re-implementation of Python's venv module plus utilities"
keywords = ["virtual environments", "venv"]
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [{ name = "Brett Cannon", email = "brett@python.org" }]
authors = [{ name = "Brett Cannon", email = "brett@python.org" }]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Topic :: Software Development",
  "Topic :: Utilities",
  "Natural Language :: English"
]

[project.optional-dependencies]
doc = ["sphinx", "sphinx-rtd-theme"]
test = ["pytest"]
lint = ["black", "mypy", "ruff"]

[project.urls]
Documentation = "https://microvenv.readthedocs.io/"
Changelog = "https://github.com/brettcannon/microvenv/releases"
Source = "https://github.com/brettcannon/microvenv"


[tool.mypy]
ignore_missing_imports = true
